# SPP

./: README.md
Assign_1 matrix_vector/: Report with analysis.docx
Assign_2 2d-convolution-omp/: annotations.advidb2  big-board-2d-convolution-codepk37.advixeproj
Assign_2 2d-convolution-omp/e000/: callstacks.def  e000.advixeexp  loop_hashes.def  roofline.data  roofline_int.data  settings.xml
Assign_2 2d-convolution-omp/e000/hs020/: hs020.advixe  metrics.advisum  threading.advisum  vectorization.advisum
Assign_2 2d-convolution-omp/e000/hs020/config/: collection.cfg  context_values.cfg  runss.options
Assign_2 2d-convolution-omp/e000/mp000/: advixe-runtc.txt  mp000.advixe
Assign_2 2d-convolution-omp/e000/trc000/: trc000.advixe
Assign_2 2d-convolution-omp/src/: CMakeLists.txt  a.out  annotations.advidb2  brute.txt  checker.py  generate.py  in.txt  main.cpp  my.cpp  src.advixeproj  test.cpp
Assign_2 2d-convolution-omp/src/e000/: e000.advixeexp
Assign_2 2d-convolution-omp/src/e000/hs005/: hs005.advixe  metrics.advisum
Assign_2 2d-convolution-omp/src/e000/hs005/archive/binaries/[vdso]/7e6d2c46bdfdfd20183545b2e43b8a3a/: [vdso]
Assign_2 2d-convolution-omp/src/e000/hs005/config/: analysis_type.cfg  collection.cfg  context_values.cfg  runss.options
Assign_2 2d-convolution-omp/src/e000/hs005/data.0/: 54861-54866.0-54866.0.th  54861-54866.0-54866.0.th.aux  54861-54866.0.trace  systemcollector-54861-pop-os-pk.sc
Assign_2 2d-convolution-omp/src/e000/hs005/sqlite-db/: dicer.db
Assign_2 2d-convolution-omp/tester/: tester.cpp
Assign_3 matrix-matrix-multiplication/src/: 1.cpp  1.txt  2.txt  CMakeLists.txt  block.cpp  blockmatix.cpp  checker.py  generator.py  main.cpp  outerprod.cpp  simd_matrixsum.cpp
Assign_3 matrix-matrix-multiplication/tester/: CMakeLists.txt  tester.cpp
Assign_4 2d-convolution-cuda/src/: CMakeLists.txt  main.cu
(+159 files in other folders)
